fix contrast issues

--- a/static/src/styles/colors.scss
+++ b/static/src/styles/colors.scss
@@ -1,6 +1,6 @@
 $colors: (
   black: black,
-  blue: darken(#5badf0, 20%),
-  green: darken(#a1e8cc, 35%),
+  blue: darken(#5badf0, 25%),
+  green: darken(#a1e8cc, 50%),
   white: darken(white, 3%)
 );
